--- a/pagination/src/styles.css
+++ b/pagination/src/styles.css
@@ -1,3 +1,33 @@
 body {
   font-family: sans-serif;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product {
+  width: 200px;
+  border: 1px solid black;
+  padding: 10px
+}
+
+.button-container {
+  display: flex;
+  column-gap: 10px;
+}
+
+.selected-button {
+  background-color: green;
+}
+
+.product-container {
+  display: flex;
+  column-gap: 40px;
+  flex-wrap: wrap;
+  width: 1000px;
+  row-gap: 20px;
+  margin: 50px;
+}
